# scaler-openenv-hackathon

./: Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  validate.py
email_triage_env/: __init__.py  baseline.py  client.py  grader.py  models.py  tasks.py
email_triage_env/server/: __init__.py  app.py  environment.py
server/: Dockerfile  app.py
tests/: test_openenv.py
