[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "0.1.0"
description = "OpenEnv-compatible email triage environment"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "requests>=2.32,<3.0",
  "openai>=2.7.2,<3.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
